--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "type": "module",
   "workspaces": [
     "src/carbonlock_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/auth-client": "^0.20.2",
+    "@dfinity/principal": "^0.20.2"
+  }
 }
