--- a/src/carbonlock_frontend/package.json
+++ b/src/carbonlock_frontend/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "setup": "npm i && dfx canister create carbonlock_backend && dfx generate carbonlock_backend && dfx deploy",
-    "start": "vite --port 3000",
+    "start": "vite",
     "prebuild": "dfx generate",
     "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@vitejs/plugin-react": "^4.6.0",
     "cross-fetch": "^3.1.6",
     "dotenv": "^16.3.1",
     "sass": "^1.63.6",
@@ -24,6 +25,10 @@
     "@dfinity/agent": "^0.20.0",
     "@dfinity/candid": "^0.20.0",
     "@dfinity/principal": "^0.20.0",
-    "lit-html": "^2.8.0"
+    "bootstrap": "^5.3.7",
+    "lit-html": "^2.8.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3"
   }
 }
